[package]
name = "certstoretopem"
version = "0.1.0"
authors = ["Jim McGrath <jimmc2@gmail.com>"]

[dependencies]
# pending changes going upstream
schannel = { git = "https://github.com/mcgoo/schannel-rs" }
#schannel = "0.1.7"

error-chain = "0.10"
base64 = "0.6"

#[replace]
#"schannel:0.1.7" = { path = "../schannel-rs" }